--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,19 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "easycorp/easy-log-handler": "^1.0.7",
         "sensio/framework-extra-bundle": "^5.2",
         "sensiolabs/security-checker": "^5.0",
+        "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
+        "symfony/debug-bundle": "*",
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/profiler-pack": "*",
         "symfony/twig-bundle": "4.2.*",
+        "symfony/var-dumper": "*",
         "symfony/yaml": "4.2.*"
     },
     "config": {
@@ -61,6 +67,7 @@
         }
     },
     "require-dev": {
+        "symfony/profiler-pack": "^1.0",
         "symfony/web-server-bundle": "4.2.*"
     }
 }
