--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,9 @@
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
         "symfony/monolog-bundle": "^3.0",
-        "symfony/profiler-pack": "*",
         "symfony/twig-bundle": "4.2.*",
         "symfony/var-dumper": "*",
+        "symfony/web-profiler-bundle": "4.2.*",
         "symfony/yaml": "4.2.*"
     },
     "config": {
