Adding slack bundle (3.x bundle), setting it as service. Adding logger as a trait

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,3 +28,6 @@ services:
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
+
+    # custom aliases for autowiring
+    Nexy\Slack\Client: '@nexy_slack.client'
