--- a/.env
+++ b/.env
@@ -19,3 +19,7 @@ APP_SECRET=a180d2e7ffcaeb7bfbdb6a080f20bdd9
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+### CUSTOM VARS
+SLACK_WEBHOOK_ENDPOINT=https://hooks.slack.com/services/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
+### END CUSTOM VARS
