--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
         "ext-iconv": "*",
         "easycorp/easy-log-handler": "^1.0.7",
         "knplabs/knp-markdown-bundle": "^1.7",
+        "nexylan/slack-bundle": "^2.1",
+        "php-http/guzzle6-adapter": "^2.0",
         "sensio/framework-extra-bundle": "^5.2",
         "sensiolabs/security-checker": "^5.0",
         "symfony/asset": "4.2.*",
