--- a/.env
+++ b/.env
@@ -23,3 +23,10 @@ APP_SECRET=a180d2e7ffcaeb7bfbdb6a080f20bdd9
 ### CUSTOM VARS
 SLACK_WEBHOOK_ENDPOINT=https://hooks.slack.com/services/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
 ### END CUSTOM VARS
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://root:@127.0.0.1:3306/the_spacebar
+###< doctrine/doctrine-bundle ###
