--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
         "symfony/monolog-bundle": "^3.0",
+        "symfony/orm-pack": "^1.0",
         "symfony/twig-bundle": "4.2.*",
         "symfony/var-dumper": "*",
         "symfony/web-profiler-bundle": "4.2.*",
