--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "ext-iconv": "*",
         "easycorp/easy-log-handler": "^1.0.7",
         "knplabs/knp-markdown-bundle": "^1.7",
+        "knplabs/knp-time-bundle": "^1.9",
         "nexylan/slack-bundle": "^2.1",
         "php-http/guzzle6-adapter": "^2.0",
         "sensio/framework-extra-bundle": "^5.2",
